--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_home">Account</string>
     <string name="title_dashboard">Drinks</string>
     <string name="title_notifications">Settings</string>
+    <string name="facebook_login">Login through Facebook</string>
+    <string name="email_login">Login with email</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
