Still working on Splash Screen, but have all content inside 'main_activity.xml'

--- a/Beerig_App/app/src/main/res/values/strings.xml
+++ b/Beerig_App/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Beerig_App</string>
+    <string name="Beerig_Logo">Beerig Logo</string>
+    <string name="Start_Partying">Start Partying</string>
 </resources>
