Added activities for tequila, rum, gin, and vodka. Added buttons that take you to each activity in HomeScreen.java

--- a/Beerig_App/app/src/main/res/values/strings.xml
+++ b/Beerig_App/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Beerig</string>
     <string name="Beerig_Logo">Beerig Logo</string>
     <string name="Start_Partying">Start Partying</string>
+    <string name="tequila">Tequila</string>
+    <string name="rum">Rum</string>
+    <string name="gin">Gin</string>
+    <string name="vodka">Vodka</string>
 </resources>
