--- a/Beerig_App/app/src/main/res/values/strings.xml
+++ b/Beerig_App/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="rum">Rum</string>
     <string name="gin">Gin</string>
     <string name="vodka">Vodka</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
