--- a/Beerig_App/app/src/main/res/values/strings.xml
+++ b/Beerig_App/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="rum">Rum</string>
     <string name="gin">Gin</string>
     <string name="vodka">Vodka</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pour">Pour Drink!</string>
+    <string name="cancel">Cancel Order</string>
 </resources>
