Got Dialog Working

--- a/Beerig_App/app/src/main/res/values/strings.xml
+++ b/Beerig_App/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="vodka">Vodka</string>
     <string name="pour">Pour Drink!</string>
     <string name="cancel">Cancel Order</string>
+    <string name="rum_spritz">Rum Spritz</string>
 </resources>
