--- a/Beerig_App/app/src/main/res/values/strings.xml
+++ b/Beerig_App/app/src/main/res/values/strings.xml
@@ -56,4 +56,7 @@
     <string name="scan">Scan</string>
     <string name="cancel">Cancel</string>
     <string name="enjoy_beerig">Enjoy the Mixed!</string>
+    <string name="settings">Settings</string>
+    <string name="thank_you">This machine was made by Andrew Niedringhaus, Brady Murphy, and Kyle Machel.We hope you enjoy the hard work we put into this machine and enjoy drinking in a safe controlled manor. If you would like to be featured on our social media, take a photo and place #MakeMeMixed in the description. Happy drinking!
+        </string>
 </resources>
